--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <!-- Quiz Container that becomes visible when button submitted -->
     <section class="container" id="quiz">
-        <h1 id="question"></h1>
+        <h1 id="question">If you could only eat one food for the rest of your life, which would you choose from below?</h1>
         <article class="container" id="choices">
             <div class="row">
                 <button type="button" id="0">Bacon & Eggs</button>
