--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </article>
     </section>
 
-    <!-- Enter zip code form for shelters -->
+    <!-- Enter zip code form for shelters when answer appears -->
     <form id="shelter-search">
         <h3>Enter Your Zip Code Below to Find Local Shelters!</h3>
         <input type="textarea" id="zipcode" placeholder="Your Zip Code"><br>
@@ -57,4 +57,6 @@
         <ul id="shelterList"></ul>
     </section>
 </body>
+
+<footer>Created by: Patrick Kinsley, Wesley Riley, Ellie Sargent, & Michael Zimmerman 2022</footer>
 </html>
