--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
 
+    <header class="navigation" id="previousMatches">
+        <a href="./previousmatches.html">View Previous Matches</a></header>
     <!-- Title Displayed at top of page -->
-    <header class="container" id="welcome-page">
+    <section class="container" id="welcome-page">
        <h1>Dog Breed Matching Quiz</h1>
   
    <!-- Main section where instructions will be, start button, as well as quiz will appear with button click -->
@@ -21,7 +23,7 @@
         <!-- Start Quiz button to hide instructions and make quiz question visible -->
         <button type="submit" class="startBtn" id="startQuiz">Start Quiz</button>
         </main>
-    </header>
+    </section>
 
     <!-- Quiz Container that becomes visible when button submitted -->
     <section class="container" id="quiz">
@@ -45,6 +47,27 @@
         </article>
     </section>
 
+    <section class="match" id="matchBreed">
+        <div class="basic-card">
+            <div class="basic-card-image">
+              <img placeholder="picture from API here">
+            </div>
+            <div class="basic-card-content content callout secondary">
+              <h5>Dog Breed Name Goes Here</h5>
+              <p>Information about the dog breed matched with goes here</p>
+            </div>
+            <div class="links callout primary">
+              <ul class="menu">
+                <li>
+                  <a href="#">Link to Search Local Shelters Input</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          
+          
+    </section>
+
     <!-- Enter zip code form for shelters when answer appears -->
     <form id="shelter-search">
         <h3>Enter Your Zip Code Below to Find Local Shelters!</h3>
@@ -56,7 +79,9 @@
     <section class="container" id="shelters">
         <ul id="shelterList"></ul>
     </section>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 <footer>Created by: Patrick Kinsley, Wesley Riley, Ellie Sargent, & Michael Zimmerman 2022</footer>
+
 </html>
