--- a/previousmatches.html
+++ b/previousmatches.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Dog Breed Matcher</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
         <a href="./index.html">Back to Quiz</a>
     </header>
 
-    <h1>Your Previous Matches</h1>
+    <h1 class="matches">Your Previous Matches</h1>
     <ol class="matches-list" id="matchesList"></ol>
 </body>
 </html>
