added photos for buttons on food quiz, began to trial colors

--- a/index.html
+++ b/index.html
@@ -30,19 +30,20 @@
         <h1 id="question">If you could only eat one food for the rest of your life, which would you choose from below?</h1>
         <article class="container" id="choices">
             <div class="row">
-                <button type="button" id="0">Bacon & Eggs</button>
+                
+                <button type="button" id="0"><img id="quiz-image" src="./images/james-kern-aLDW0oQ0NtU-unsplash.jpg"></button>
             </div>
             <div class="row">
-                <button type="button" id="1">Spaghetti</button>
+                <button type="button" id="1"><img id="quiz-image" src="./images/homescreenify-sA3wymYqyaI-unsplash.jpg"></button>
             </div>
             <div class="row">
-                <button type="button" id="2">Tacos</button>
+                <button type="button" id="2"><img id="quiz-image" src="./images/krisztian-tabori-ZQf4jzkpz1k-unsplash.jpg"></button>
             </div>
             <div class="row">
-                <button type="button" id="3">Pizza</button>
+                <button type="button" id="3"><img id="quiz-image" src="./images/fatima-akram-uU0Anw-8Vsg-unsplash.jpg"></button>
             </div>
             <div class="row">
-                <button type="button" id="4">Steak</button>
+                <button type="button" id="4"><img id="quiz-image" src="./images/chad-montano-M0lUxgLnlfk-unsplash.jpg"></button>
             </div>
         </article>
     </section>
@@ -50,7 +51,7 @@
     <section class="match" id="matchBreed">
         <div class="basic-card">
             <div class="basic-card-image">
-              <img placeholder="picture from API here">
+              <img placeholder="#">
             </div>
             <div class="basic-card-content content callout secondary">
               <h5>Dog Breed Name Goes Here</h5>
