--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 </head>
 <body>
 
+    <header class="navigation" id="previousMatches">
+        <a href="./previousmatches.html">View Previous Matches</a></header>
     <!-- Title Displayed at top of page -->
-    <header class="container" id="welcome-page">
+    <section class="container" id="welcome-page">
        <h1>Dog Breed Matching Quiz</h1>
   
-    <!-- Main section where instructions will be, start button, as well as quiz will appear with button click -->
+   <!-- Main section where instructions will be, start button, as well as quiz will appear with button click -->
         <main>
         <h3>Use this quiz to determine your recommended dog breed.</h3>
         <h3>Then, you can enter your zip code to be matched to local shelters!</h3>
@@ -21,32 +23,53 @@
         <!-- Start Quiz button to hide instructions and make quiz question visible -->
         <button type="submit" class="startBtn" id="startQuiz">Start Quiz</button>
         </main>
-    </header>
+    </section>
 
     <!-- Quiz Container that becomes visible when button submitted -->
     <section class="container" id="quiz" style="display:none">
         <h1 id="question">If you could only eat one food for the rest of your life, which would you choose from below?</h1>
         <article class="container" id="choices">
-            <div class="row">
-                <button type="button" id="0">Bacon & Eggs</button>
+            <div class="row">                
+                <input type="button" id="zero"><img id="baconEggsImage" src="./assets/baconeggsimage.jpg"></button>
             </div>
             <div class="row">
-                <button type="button" id="1">Spaghetti</button>
+                <button type="button" id="one"><img id="spaghettiImage" src="./assets/spaghettiimage.jpg"></button>
             </div>
             <div class="row">
-                <button type="button" id="2">Tacos</button>
+                <button type="button" id="two"><img id="tacosImage" src="./assets/tacosimage.jpg"></button>
             </div>
             <div class="row">
-                <button type="button" id="3">Pizza</button>
+                <button type="button" id="three"><img id="pizzaImage" src="./assets/pizzaimage.jpg"></button>
             </div>
             <div class="row">
-                <button type="button" id="4">Steak</button>
+                <button type="button" id="four"><img id="steakImage" src="./assets/steakimage.jpg"></button>
             </div>
         </article>
     </section>
 
+    <section class="match" id="matchBreed" style="display:none">
+        <div class="basic-card">
+            <div class="basic-card-image">
+              <img placeholder="#">
+            </div>
+            <div class="basic-card-content content callout secondary">
+              <h5>Dog Breed Name Goes Here</h5>
+              <p>Information about the dog breed matched with goes here</p>
+            </div>
+            <div class="links callout primary">
+              <ul class="menu">
+                <li>
+                  <a href="#">Link to Search Local Shelters Input</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          
+          
+    </section>
+
     <!-- Enter zip code form for shelters when answer appears -->
-    <form id="shelter-search" style="display: none">
+    <form id="shelter-search" style="display:none">
         <h3>Enter Your Zip Code Below to Find Local Shelters!</h3>
         <input type="textarea" id="zipcode" placeholder="Your Zip Code"><br>
         <button type="button" id="submitZipcode">Search for Shelters</button>
@@ -56,8 +79,9 @@
     <section class="container" id="shelters">
         <ul id="shelterList"></ul>
     </section>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 <footer>Created by: Patrick Kinsley, Wesley Riley, Ellie Sargent, & Michael Zimmerman 2022</footer>
-<script src="./assets/js/script.js"></script>
+
 </html>
