added/linked foundation and font-awesome cdn

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.7.4/js/foundation.min.js" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Dog Breed Matcher</title>
 </head>
@@ -57,24 +59,15 @@
               <h5>Dog Breed Name Goes Here</h5>
               <p>Information about the dog breed matched with goes here</p>
             </div>
-            <div class="links callout primary">
-              <ul class="menu">
-                <li>
-                  <a href="#">Link to Search Local Shelters Input</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          
-          
-    </section>
 
-    <!-- Enter zip code form for shelters when answer appears -->
-    <form id="shelter-search">
-        <h3>Enter Your Zip Code Below to Find Local Shelters!</h3>
-        <input type="textarea" id="zipcode" placeholder="Your Zip Code"><br>
-        <button type="button" id="submitZipcode">Search for Shelters</button>
-    </form>
+             <!-- Enter zip code form for shelters when answer appears -->
+        <form id="shelter-search">
+            <h5>Enter Your Zip Code Below to Find Local Shelters!</h5>
+            <input type="textarea" id="zipcode" placeholder="Your Zip Code"><br>
+            <button type="button" id="submitZipcode">Search for Shelters</button>
+        </form>
+          </div>
+    </section>
 
     <!-- List of 3 local shelters near entered zip code with address and phone number-->
     <section class="container" id="shelters">
@@ -83,6 +76,6 @@
     <script src="./assets/js/script.js"></script>
 </body>
 
-<footer>Created by: Patrick Kinsley, Wesley Riley, Ellie Sargent, & Michael Zimmerman 2022</footer>
+<footer>Created by: Patrick Kinsley, Wesley Riley, Ellie Sargent 2022</footer>
 
 </html>
