update display to flex for screen response, updated fonts, fixed footer location

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.7.4/js/foundation.min.js" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.4/dist/css/foundation.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Dog Breed Matcher</title>
@@ -29,10 +29,9 @@
 
     <!-- Quiz Container that becomes visible when button submitted -->
     <section class="container" id="quiz">
-        <h1 id="question">If you could only eat one food for the rest of your life, which would you choose from below?</h1>
+        <h2 id="question">If you could only eat one food for the rest of your life, which would you choose from below?</h2>
         <article class="container" id="choices">
             <div class="row">
-                
                 <button type="button" id="0"><img id="quiz-image" src="./images/james-kern-aLDW0oQ0NtU-unsplash.jpg"></button>
             </div>
             <div class="row">
@@ -49,6 +48,8 @@
             </div>
         </article>
     </section>
+
+    
 
     <section class="match" id="matchBreed">
         <div class="basic-card">
