my feeble attempt to fetch and display api data lol

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
         </article>
     </section>
 
+    <p id="storage">Images will be displayed here</P>
+
     <section class="match" id="matchBreed" style="display:none">
         <div class="basic-card">
             <div class="basic-card-image">
