started to center containers, hover effects over buttons

--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Dog Breed Matcher</title>
 </head>
+<header class="navigation" id="previousMatches">
+    <a href="./previousmatches.html">View Previous Matches</a></header>
+
 <body>
 
-    <header class="navigation" id="previousMatches">
-        <a href="./previousmatches.html">View Previous Matches</a></header>
+    
     <!-- Title Displayed at top of page -->
+    <main>
     <section class="container" id="welcome-page">
        <h1>Dog Breed Matching Quiz</h1>
   
@@ -33,17 +36,9 @@
         <article class="container" id="choices">
             <div class="row">                
                 <button type="button" id="zero"><img id="baconEggsImage" class="quiz-image" src="./images/james-kern-aLDW0oQ0NtU-unsplash.jpg"></button>
-            </div>
-            <div class="row">
                 <button type="button" id="one"><img id="spaghettiImage" class="quiz-image" src="./images/homescreenify-sA3wymYqyaI-unsplash.jpg"></button>
-            </div>
-            <div class="row">
                 <button type="button" id="two"><img id="tacosImage" class="quiz-image" src="./images/krisztian-tabori-ZQf4jzkpz1k-unsplash.jpg"></button>
-            </div>
-            <div class="row">
                 <button type="button" id="three"><img id="pizzaImage" class="quiz-image" src="./images/alan-hardman-SU1LFoeEUkk-unsplash.jpg"></button>
-            </div>
-            <div class="row">
                 <button type="button" id="four"><img id="steakImage" class="quiz-image" src="./images/edson-saldana-J88no2vCrTs-unsplash.jpg"></button>
             </div>
         </article>
@@ -84,6 +79,7 @@
         <ul id="shelterList"></ul>
     </section>
     <script src="./assets/js/script.js"></script>
+    </main>
 </body>
 
 <footer>Created by: Patrick Kinsley, Wesley Riley, Ellie Sargent 2022</footer>
