updates to HTML layout of previousmatches page

--- a/previousmatches.html
+++ b/previousmatches.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Dog Breed Matcher</title>
 </head>
+<header>
+    <a href="./index.html">Back to Quiz</a>
+</header>
 <body>
-    <header>
-        <a href="./index.html">Back to Quiz</a>
-    </header>
-
-    <h1 class="matches">Your Previous Matches</h1>
-    <ol class="matches-list" id="matchesList"></ol>
+   
+    <section>
+        <h1 class="matches">Your Previous Matches</h1>
+        <ol class="matches-list" id="matchesList"></ol>
+    </section>
 </body>
 </html>
