added media queries for mobile responsiveness, edited CSS for quiz-image so that images display uniformly and scale proportionally

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <body>
 
     <header class="navigation" id="previousMatches">
-        <a href="./previousmatches.html">View Previous Matches</a></header>
-    <!-- Title Displayed at top of page -->
+        <a href="./previousmatches.html">View Previous Matches</a>
+    </header>
+    
+        <!-- Title Displayed at top of page -->
     <section class="container" id="welcome-page">
        <h1>Dog Breed Matching Quiz</h1>
   
@@ -73,7 +75,7 @@
     </section>
 
     <!-- Enter zip code form for shelters when answer appears -->
-    <form id="shelter-search" style="display:none">
+    <form id="shelter-search" class= "shelter-search" style="display:none">
         <h3>Enter Your Zip Code Below to Find Local Shelters!</h3>
         <input type="textarea" id="zipcode" placeholder="Your Zip Code"><br>
         <button type="button" id="submitZipcode">Search for Shelters</button>
@@ -87,5 +89,6 @@
 </body>
 
 <footer>Created by: Patrick Kinsley, Wesley Riley, Ellie Sargent 2022</footer>
+
 
 </html>
