fixed centering of initial Page and quiz question containers

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="navigation" id="previousMatches">
         <a href="./previousmatches.html">View Previous Matches</a>
     </header>
-    <main>
+    <main class="center-objects">
         <!-- Title Displayed at top of page -->
      <section class="container" id="welcome-page">
        <h1>Dog Breed Matching Quiz</h1>
@@ -78,10 +78,14 @@
         <ul id="shelterList"></ul>
     </section>
     <script src="./assets/js/script.js"></script>
+
+    <footer class="names">Created by: Patrick Kinsley, Wesley Riley, Ellie Sargent 2022</footer>
     </main>
+
+
 </body>
 
-<footer>Created by: Patrick Kinsley, Wesley Riley, Ellie Sargent 2022</footer>
+
 
 
 </html>
