linked javascript to previousmatches page

--- a/previousmatches.html
+++ b/previousmatches.html
@@ -16,5 +16,7 @@
         <h1 class="matches">Your Previous Matches</h1>
         <ol class="matches-list" id="matchesList"></ol>
     </section>
+
+<script src="./assets/js/script.js"></script>
 </body>
 </html>
