fixed picture API

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="match" id="matchBreed" style="display:none">
         <div class="basic-card">
             <div class="basic-card-image">
-              <img placeholder="#">
+              <img id="storage">
             </div>
             <div class="basic-card-content content callout secondary">
               <h5>Dog Breed Name Goes Here</h5>
@@ -72,7 +72,7 @@
     </form>
 
     <!-- List of 3 local shelters near entered zip code with address and phone number-->
-    <section class="shelter-container" id="shelters">
+    <section class="shelter-container" id="shelters" style="display:none">
         <ul id="shelterList"></ul>
     </section>
     <script src="./assets/js/script.js"></script>
