--- a/previousmatches.html
+++ b/previousmatches.html
@@ -12,7 +12,7 @@
 </header>
 <body>
    
-    <section>
+    <section class="centered">
         <h1 class="matches">Your Previous Matches</h1>
         <ol class="matches-list" id="matchesList"></ol>
     </section>
