--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
               <img id="storage">
             </div>
             <div class="basic-card-content content callout secondary">
-              <h5>Dog Breed Name Goes Here</h5>
-              <p>Information about the dog breed matched with goes here</p>
+              <h5 id="breedName">Dog Breed Name Goes Here</h5>
+              <p id="breedFacts">Information about the dog breed matched with goes here</p>
             </div>
             <div class="links callout primary">
               <ul class="menu">
