--- a/index.html
+++ b/index.html
@@ -54,22 +54,29 @@
               <h5 id="breedName">Dog Breed Name Goes Here</h5>
               <p id="breedFacts">Information about the dog breed matched with goes here</p>
             </div>
-            <div class="links callout primary">
-              <ul class="menu">
-                <li>
-                  <a href="#">Link to Search Local Shelters Input</a>
-                </li>
-              </ul>
-            </div>
+            <form id="shelterSearch">
+              <div class="grid-container">
+                <div class="grid-x grid-padding-x">
+                  <div class="medium-6 cell">
+                    <label>Enter Your Zip Code Below to Find Local Shelters!
+                      <input type="text" placeholder="Your Zip Code">
+                    </label>
+                    <button id="submitZipCode">Search</button>
+                  </div>
+                </div>
+              </div>
+            </form>
           </div>         
     </section>
 
     <!-- Enter zip code form for shelters when answer appears -->
-    <form id="shelter-search" class= "shelter-search" style="display:none">
+    
+
+    <!-- <form id="shelter-search" class= "shelter-search" style="display:none">
         <h3>Enter Your Zip Code Below to Find Local Shelters!</h3>
         <input type="textarea" id="zipcode" placeholder="Your Zip Code"><br>
         <button type="button" id="submitZipcode">Search for Shelters</button>
-    </form>
+    </form> -->
 
     <!-- List of 3 local shelters near entered zip code with address and phone number-->
     <section class="shelter-container" id="shelters" style="display:none">
