Addition of search function using second API

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <img id="storage">
             </div>
             <div class="basic-card-content content callout secondary">
-              <h5>Dog Breed Name Goes Here</h5>
+              <h5 id="breedName">Dog Breed Name Goes Here</h5>
               <p>Information about the dog breed matched with goes here</p>
             </div>
             <div class="links callout primary">
