Addition of CSS to make the dog image a standard size and quiz response appends the breed

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="match" id="matchBreed" style="display:none">
         <div class="basic-card">
             <div class="basic-card-image">
-              <img id="storage">
+              <img id="storage" class="dogImg">
             </div>
             <div class="basic-card-content content callout secondary">
               <h5 id="breedName">Dog Breed Name Goes Here</h5>
