updated finding shelters, organizations in console log

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
             </div>
             <form id="shelterSearch">
               <div class="grid-container">
-                <div class="grid-x grid-padding-x">
+                <div class="grid-x grid-padding-x" id="search-box">
                   <div class="medium-6 cell">
-                    <label>Enter Your Zip Code Below to Find Local Shelters!
-                      <input type="text" placeholder="Your Zip Code">
+                    <label class="bold">Enter Your Zip Code Below to Find Local Shelters!
+                      <input type="text" placeholder="Your Zip Code" id="enter-zipcode">
                     </label>
                     <button id="submitZipCode">Search</button>
                   </div>
