addition of fixed names

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
               <img id="storage" class="dogImg">
             </div>
             <div class="basic-card-content content callout secondary">
-              <h5 id="breedName">Dog Breed Name Goes Here</h5>
+              <h5 id="breedName"></h5>
               <p>Information about the dog breed matched with goes here</p>
             </div>
             <div class="links callout primary">
               <ul class="menu">
                 <li>
-                  <a href="#">Link to Search Local Shelters Input</a>
+                  <a href="#"></a>
                 </li>
               </ul>
             </div>
