functional fun facts for Aussie and Bulldog (to finish later)

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
               <img id="storage">
             </div>
             <div class="basic-card-content content callout secondary">
-              <h5 id="breedName">Dog Breed Name Goes Here</h5>
-              <p id="breedFacts">Information about the dog breed matched with goes here</p>
+              <h2 id="breedName">Dog Breed Name Goes Here</h2>
+              <p id="breedFacts"></p>
             </div>
             <form id="shelterSearch">
               <div class="grid-container">
