--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
      </section>
     </main>
 
+<!-- Card with photo of breed and fun facts -->
     <section class="match" id="matchBreed" style="display:none">
         <div class="basic-card">
             <div class="basic-card-image">
@@ -54,6 +55,9 @@
               <h2 id="breedName">Dog Breed Name Goes Here</h2>
               <p id="breedFacts"></p>
             </div>
+
+            <!-- Enter zip code form for shelters when answer appears -->
+
             <form id="shelterSearch">
               <div class="grid-container">
                 <div class="grid-x grid-padding-x" id="search-box">
@@ -69,29 +73,15 @@
           </div>         
     </section>
 
-    <!-- Enter zip code form for shelters when answer appears -->
-    
-
-    <!-- <form id="shelter-search" class= "shelter-search" style="display:none">
-        <h3>Enter Your Zip Code Below to Find Local Shelters!</h3>
-        <input type="textarea" id="zipcode" placeholder="Your Zip Code"><br>
-        <button type="button" id="submitZipcode">Search for Shelters</button>
-    </form> -->
-
-    <!-- List of 3 local shelters near entered zip code with address and phone number-->
+    <!-- List of local shelters near entered zip code -->
     <section class="shelter-container" id="shelters" style="display:none">
         <h2>See your local Shelters Below!</h2>
         <ul id="shelterList"></ul>
+
     </section>
     <script src="./assets/js/script.js"></script>
 
     <footer class="names">Created by: Patrick Kinsley, Wesley Riley, Ellie Sargent 2022</footer>
     </main>
-
-
 </body>
-
-
-
-
 </html>
