addition of pictures after search function

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <section class="match" id="matchBreed" style="display:none">
         <div class="basic-card">
-            <div class="basic-card-image">
+            <div class="basic-card-image" id="image">
               <img id="storage">
             </div>
             <div class="basic-card-content content callout secondary">
@@ -80,6 +80,8 @@
 
     <!-- List of 3 local shelters near entered zip code with address and phone number-->
     <section class="shelter-container" id="shelters" style="display:none">
+        <div id="shelterDogs"></div>
+        <div id="localDogs"></div>
         <h2>See your local Shelters Below!</h2>
         <ul id="shelterList"></ul>
     </section>
