Finalize local storage

--- a/previousmatches.html
+++ b/previousmatches.html
@@ -12,11 +12,11 @@
 </header>
 <body>
    
-    <section class="centered">
+    <section class="centered center-horizontal">
         <h1 class="matches">Your Previous Matches</h1>
         <ol class="matches-list" id="matchesList"></ol>
     </section>
 
-<script src="./assets/js/script.js"></script>
+<script src="./assets/js/storage.js"></script>
 </body>
 </html>
